Update from December 27, 2021

--- a/67024-h/67024-h.htm
+++ b/67024-h/67024-h.htm
@@ -180,7 +180,7 @@ country where you are located before using this eBook.
 <p style='display:block; text-indent:0; margin:1em 0'>Release Date: December 27, 2021 [eBook #67024]</p>
 <p style='display:block; text-indent:0; margin:1em 0'>Language: French</p>
   <p style='display:block; margin-top:1em; margin-bottom:0; margin-left:2em; text-indent:-2em; text-align:left'>Produced by: Claudine Corbasson and the Online Distributed Proofreading Team at https://www.pgdp.net (This file was produced from images generously made available by The Internet Archive/Canadian Libraries)</p>
-<div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK ŒUVRES COMPLÈTES DE GUY DE MAUPASSANT ***</div>
+<div style='margin-top:2em; margin-bottom:4em'>*** START OF THE PROJECT GUTENBERG EBOOK ŒUVRES COMPLèTES DE GUY DE MAUPASSANT ***</div>
 
 <hr class="full" />
 
@@ -6392,7 +6392,7 @@ par</p>
 
 <hr class="full" />
 
-<div style='display:block; margin-top:4em'>*** END OF THE PROJECT GUTENBERG EBOOK ŒUVRES COMPLÈTES DE GUY DE MAUPASSANT ***</div>
+<div style='display:block; margin-top:4em'>*** END OF THE PROJECT GUTENBERG EBOOK ŒUVRES COMPLèTES DE GUY DE MAUPASSANT ***</div>
 <div style='text-align:left'>
 
 <div style='display:block; margin:1em 0'>
